# Agent-STTM

./: .gitignore  .mcp.json  BLOG.md  README.md  pyproject.toml
input/: sample_banking_dw_lineage_mapping.xlsx  sample_informatica_mapping.xlsx  sample_informatica_mapping_lineage.xml
output/: Agent-STTM-Blog.docx  sample_banking_dw_lineage.mmd.md  sample_banking_dw_lineage_mapping.xlsx  sample_informatica_mapping.xlsx
src/lineage_mcp/: analyzer.py  cli.py  diagram.py  excel.py  graph.py  render.py  server.py
src/lineage_mcp/sql/: parser.py
src/lineage_mcp/xml/: __init__.py  detect.py  generic.py  informatica.py  ssis.py
tests/: test_analyzer.py  test_diagram.py  test_excel.py  test_sql_parser.py  test_xml_parsers.py
tests/Input_file/: sample_banking_dw_lineage.sql
tests/fixtures/: sample.dtsx  sample.sql  sample_generic.xml  sample_informatica.xml
